move /conf to root